[gd_scene load_steps=21 format=3 uid="uid://5afnnhdblb8p"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_v40wr"]
[ext_resource type="LabelSettings" uid="uid://csrb5ilr7y6dy" path="res://resources/main_menu_title_label_setting.tres" id="2_ckptl"]
[ext_resource type="PackedScene" uid="uid://cues4uwwmc7sa" path="res://scene_objects/menu_background.tscn" id="2_vuhek"]
[ext_resource type="StyleBox" uid="uid://67m76h2nyeyy" path="res://resources/main_menu_button_style.tres" id="3_b61lj"]
[ext_resource type="StyleBox" uid="uid://cscwrtv4vl12l" path="res://resources/main_menu_button_hover_style.tres" id="4_kcoe6"]
[ext_resource type="FontFile" uid="uid://dx5eri8m2oqq8" path="res://assets/fonts/Catamaran-VariableFont_wght.ttf" id="4_msr17"]
[ext_resource type="Texture2D" uid="uid://nkkjvw7lsahm" path="res://assets/sprites/titulo_1.png" id="4_o61wq"]
[ext_resource type="StyleBox" uid="uid://dtfd366g1j00" path="res://resources/main_menu_button_pressed_style.tres" id="5_hqrxp"]
[ext_resource type="FontFile" uid="uid://c1gg0yw02pyb5" path="res://assets/fonts/dogicapixel.ttf" id="7_4bt73"]
[ext_resource type="PackedScene" uid="uid://d1oyxvj1u5wof" path="res://scene_objects/blip.tscn" id="10_erdpa"]
[ext_resource type="PackedScene" uid="uid://b05n1aavwqjfg" path="res://scene_objects/settings.tscn" id="11_5pplk"]
[ext_resource type="Texture2D" uid="uid://1lgd312cgq0g" path="res://assets/sprites/mosca_enemigo_1.png" id="12_vxmco"]
[ext_resource type="PackedScene" uid="uid://vynkflwpis8o" path="res://scene_objects/particle_effect.tscn" id="13_lmgql"]
[ext_resource type="AudioStream" uid="uid://cp4rxiedr6f88" path="res://assets/sfx/hit.wav" id="14_yvk84"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eypyq"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0156863, 0.109804, 0.145098, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="LabelSettings" id="LabelSettings_cpmo2"]
font = ExtResource("7_4bt73")
font_size = 30
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="Curve2D" id="Curve2D_006iv"]
_data = {
"points": PackedVector2Array(59.397, -248.902, -59.397, 248.902, 423, -117, 25.8123, -162.428, -25.8123, 162.428, 36, 185, -5.65686, -248.902, 5.65686, 248.902, 488, 594, 123.066, -212.448, -123.066, 212.448, 75, 685, 801.078, -130.246, -801.078, 130.246, -30, 1365, 11.3137, 469.519, -11.3137, -469.519, -238, 800, -169.706, 285.671, 169.706, -285.671, -146, -61, 0, 0, 0, 0, 411, -197)
}
point_count = 8

[sub_resource type="Animation" id="Animation_4rusn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flyPath/flyfollow:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_0l4vs"]
resource_name = "fly"
length = 20.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flyPath/flyfollow:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hrd3q"]
_data = {
"RESET": SubResource("Animation_4rusn"),
"fly": SubResource("Animation_0l4vs")
}

[node name="mainMenu" type="Node2D"]
script = ExtResource("1_v40wr")

[node name="backgroudMenu" parent="." instance=ExtResource("2_vuhek")]

[node name="menuContainer" type="VBoxContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="TopMargin" type="MarginContainer" parent="menuContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Title" type="Label" parent="menuContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
label_settings = ExtResource("2_ckptl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="menuContainer/Title"]
layout_mode = 0
offset_left = 625.0
offset_top = -91.0
offset_right = 1308.0
offset_bottom = 299.0
texture = ExtResource("4_o61wq")
expand_mode = 5
stretch_mode = 4

[node name="optionsContainer" type="HBoxContainer" parent="menuContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="leftMargin" type="MarginContainer" parent="menuContainer/optionsContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="buttonsContainer" type="VBoxContainer" parent="menuContainer/optionsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="topMargin" type="MarginContainer" parent="menuContainer/optionsContainer/buttonsContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="PlayButton" type="Button" parent="menuContainer/optionsContainer/buttonsContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 0
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../ExitButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_msr17")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = ExtResource("3_b61lj")
theme_override_styles/hover = ExtResource("4_kcoe6")
theme_override_styles/pressed = ExtResource("5_hqrxp")
theme_override_styles/disabled = ExtResource("3_b61lj")
theme_override_styles/focus = SubResource("StyleBoxFlat_eypyq")
text = "Play"

[node name="margin1" type="MarginContainer" parent="menuContainer/optionsContainer/buttonsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="SettingsButton" type="Button" parent="menuContainer/optionsContainer/buttonsContainer"]
custom_minimum_size = Vector2(25, 100)
layout_mode = 2
size_flags_vertical = 0
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../PlayButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_msr17")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = ExtResource("3_b61lj")
theme_override_styles/hover = ExtResource("4_kcoe6")
theme_override_styles/pressed = ExtResource("5_hqrxp")
theme_override_styles/disabled = ExtResource("3_b61lj")
theme_override_styles/focus = SubResource("StyleBoxFlat_eypyq")
text = "Settings"

[node name="margin2" type="MarginContainer" parent="menuContainer/optionsContainer/buttonsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CreditsButton" type="Button" parent="menuContainer/optionsContainer/buttonsContainer"]
custom_minimum_size = Vector2(25, 100)
layout_mode = 2
size_flags_vertical = 0
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../SettingsButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_msr17")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = ExtResource("3_b61lj")
theme_override_styles/hover = ExtResource("4_kcoe6")
theme_override_styles/pressed = ExtResource("5_hqrxp")
theme_override_styles/disabled = ExtResource("3_b61lj")
theme_override_styles/focus = SubResource("StyleBoxFlat_eypyq")
text = "Credits"

[node name="margin3" type="MarginContainer" parent="menuContainer/optionsContainer/buttonsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ExitButton" type="Button" parent="menuContainer/optionsContainer/buttonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 100)
layout_mode = 2
size_flags_vertical = 0
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_msr17")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = ExtResource("3_b61lj")
theme_override_styles/hover = ExtResource("4_kcoe6")
theme_override_styles/pressed = ExtResource("5_hqrxp")
theme_override_styles/disabled = ExtResource("3_b61lj")
theme_override_styles/focus = SubResource("StyleBoxFlat_eypyq")
text = "Exit"

[node name="bottomMargin" type="MarginContainer" parent="menuContainer/optionsContainer/buttonsContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="rightMargin" type="MarginContainer" parent="menuContainer/optionsContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="versionString" type="Label" parent="."]
custom_minimum_size = Vector2(0, 12)
offset_top = 1028.0
offset_right = 1920.0
offset_bottom = 1078.0
text = "VersionString"
label_settings = SubResource("LabelSettings_cpmo2")
vertical_alignment = 1

[node name="blip" parent="." instance=ExtResource("10_erdpa")]
bus = &"Master"

[node name="flyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_006iv")

[node name="flyfollow" type="PathFollow2D" parent="flyPath"]
position = Vector2(423, -117)
rotation = 1.80505

[node name="MoscaEnemigo1" type="Sprite2D" parent="flyPath/flyfollow"]
unique_name_in_owner = true
rotation = -1.80505
texture = ExtResource("12_vxmco")

[node name="ParticleEffect" parent="flyPath/flyfollow/MoscaEnemigo1" instance=ExtResource("13_lmgql")]
unique_name_in_owner = true
emission_rect_extents = Vector2(200, 100)

[node name="FlyCollision" type="Area2D" parent="flyPath/flyfollow/MoscaEnemigo1"]

[node name="FlyCollisionShape" type="CollisionPolygon2D" parent="flyPath/flyfollow/MoscaEnemigo1/FlyCollision"]
polygon = PackedVector2Array(-51.0001, -34.9999, -52, -16.9999, -47, 3.00006, -27, 7.00004, 3.05176e-05, 25, 31, 3.99996, 46, 0.999939, 50.9999, -36.0001, 40.9999, -37.0001, 22, -17, 13.9999, -40, -14.0001, -40, -21, -13, -42.0001, -37.9999)

[node name="flydeath" type="AudioStreamPlayer" parent="flyPath/flyfollow/MoscaEnemigo1"]
unique_name_in_owner = true
stream = ExtResource("14_yvk84")
bus = &"sfx"

[node name="settings" parent="." instance=ExtResource("11_5pplk")]
visible = false

[node name="flyAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fly"
libraries = {
"": SubResource("AnimationLibrary_hrd3q")
}

[connection signal="pressed" from="menuContainer/optionsContainer/buttonsContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="menuContainer/optionsContainer/buttonsContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="menuContainer/optionsContainer/buttonsContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="menuContainer/optionsContainer/buttonsContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="mouse_entered" from="flyPath/flyfollow/MoscaEnemigo1/FlyCollision" to="." method="_on_fly_collision_mouse_entered"]
[connection signal="visibility_changed" from="settings" to="." method="_on_settings_visibility_changed"]
